# cec-control

./: .clang-format  .gitignore  CMakeLists.txt  README.md
cmake/: cmake_uninstall.cmake.in
docs/: configuration.md  default-paths.md
etc/: cec-control.conf  cec-control.service  cec-daemon.service
scripts/: cec-daemon.service.in
src/: main.cpp
src/client/: cec_client.cpp  cec_client.h  client_runner.cpp  client_runner.h  command_builder.cpp  command_builder.h  command_mapper.cpp  command_mapper.h  main.cpp  socket_client.cpp  socket_client.h
src/common/: application_mode.cpp  application_mode.h  argument_parser.cpp  argument_parser.h  backoff_schedule.h  buffer_manager.cpp  buffer_manager.h  buffer_pool.cpp  buffer_pool.h  command_registry.cpp  command_registry.h  config_manager.cpp  config_manager.h  deadline.h  event_loop.cpp  event_loop.h  event_poller.cpp  event_poller.h  help_printer.cpp  help_printer.h  key_codes.cpp  key_codes.h  logger.cpp  logger.h  main_thread_work.cpp  main_thread_work.h  messages.cpp  messages.h  protocol.cpp  protocol.h  signal_source.cpp  signal_source.h  system_paths.cpp  system_paths.h  systemd_env.cpp  systemd_env.h  systemd_notify.cpp  systemd_notify.h  timer_source.cpp  timer_source.h  (+4 more)
src/daemon/: adapter_lifecycle.cpp  adapter_lifecycle.h  app_config.cpp  app_config.h  cec_adapter.cpp  cec_adapter.h  cec_daemon.cpp  cec_daemon.h  cec_manager.cpp  cec_manager.h  cec_operation.cpp  cec_operation.h  command_dispatch.cpp  command_dispatch.h  command_dispatcher.cpp  command_dispatcher.h  command_queue.cpp  command_queue.h  command_router.cpp  command_router.h  command_throttler.cpp  command_throttler.h  daemon_bootstrap.cpp  daemon_bootstrap.h  dbus_monitor.cpp  dbus_monitor.h  device_operations.cpp  device_operations.h  main.cpp  socket_connection.cpp  socket_connection.h  socket_server.cpp  socket_server.h  standby_policy.cpp  standby_policy.h  thread_pool.cpp  thread_pool.h
src/daemon/cec/: adapter_config.h  adapter_interface.h  adapter_worker.cpp  adapter_worker.h  libcec_adapter.cpp  libcec_adapter.h  operations.cpp  operations.h
src/daemon/hook/: cec_hook_subsystem.cpp  cec_hook_subsystem.h  hook_executor.cpp  hook_executor.h
src/daemon/power/: adapter_reconnect.cpp  adapter_reconnect.h  power_lifecycle.cpp  power_lifecycle.h  power_supervisor.cpp  power_supervisor.h  suspend_queue.cpp  suspend_queue.h
